apps/netbird/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: netbird
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
