apps/netbird/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: netbird-management
  namespace: netbird
  labels:
    app: netbird-management
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  - port: 443
    targetPort: grpc
    protocol: TCP
    name: grpc
  selector:
    app: netbird-management
---
apiVersion: v1
kind: Service
metadata:
  name: netbird-signal
  namespace: netbird
  labels:
    app: netbird-signal
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  - port: 10000
    targetPort: grpc
    protocol: TCP
    name: grpc
  selector:
    app: netbird-signal
---
apiVersion: v1
kind: Service
metadata:
  name: netbird-dashboard
  namespace: netbird
  labels:
    app: netbird-dashboard
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: netbird-dashboard
